// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayRow day row starts on Monday or Saturday 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -20,1 +20,1 @@
-     Monday, March 18
+     Saturday, March 16
@@ -91,1 +91,1 @@
-             18
+             16
@@ -113,1 +113,1 @@
-             Mon
+             Sat
@@ -183,1 +183,1 @@
-             19
+             17
@@ -205,1 +205,1 @@
-             Tue
+             Sun
@@ -275,1 +275,1 @@
-             20
+             18
@@ -297,1 +297,1 @@
-             Wed
+             Mon
@@ -367,1 +367,1 @@
-             21
+             19
@@ -389,1 +389,1 @@
-             Thu
+             Tue
@@ -459,1 +459,1 @@
-             22
+             20
@@ -481,1 +481,1 @@
-             Fri
+             Wed
@@ -551,1 +551,1 @@
-             23
+             21
@@ -573,1 +573,1 @@
-             Sat
+             Thu
@@ -643,1 +643,1 @@
-             24
+             22
@@ -665,1 +665,1 @@
-             Sun
+             Fri
`;

exports[`DayRow day row starts on Monday or Sunday 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -20,1 +20,1 @@
-     Monday, March 18
+     Sunday, March 17
@@ -91,1 +91,1 @@
-             18
+             17
@@ -113,1 +113,1 @@
-             Mon
+             Sun
@@ -183,1 +183,1 @@
-             19
+             18
@@ -205,1 +205,1 @@
-             Tue
+             Mon
@@ -275,1 +275,1 @@
-             20
+             19
@@ -297,1 +297,1 @@
-             Wed
+             Tue
@@ -367,1 +367,1 @@
-             21
+             20
@@ -389,1 +389,1 @@
-             Thu
+             Wed
@@ -459,1 +459,1 @@
-             22
+             21
@@ -481,1 +481,1 @@
-             Fri
+             Thu
@@ -551,1 +551,1 @@
-             23
+             22
@@ -573,1 +573,1 @@
-             Sat
+             Fri
@@ -643,1 +643,1 @@
-             24
+             23
@@ -665,1 +665,1 @@
-             Sun
+             Sat
`;
